--- a/.gitignore
+++ b/.gitignore
@@ -174,7 +174,8 @@ publish/
 *.azurePubxml
 # Note: Comment the next line if you want to checkin your web deploy settings,
 # but database connection strings (with potential passwords) will be unencrypted
-*.pubxml
+# PgP 2/17/2018 we want pub.xml included, there are no databases in this solution.
+#*.pubxml
 *.publishproj
 
 # Microsoft Azure Web App publish settings. Comment the next line if you want to
